data and new pages

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,22 @@
 # .env.local
+# Copy this file to .env.local and fill in the values
+
+# Supabase Configuration
 VITE_SUPABASE_URL=
 VITE_SUPABASE_ANON_KEY=
+
+# n8n Webhook Base URL
+VITE_N8N_WEBHOOK_URL=https://n8n.ai4eg.com/webhook
+
+# Individual Webhook Endpoints
+VITE_WEBHOOK_CONTACT_US=7b9efc27-c5c6-415a-9234-e2864618da9c
+VITE_WEBHOOK_CONSULTATION=d925225a-2d68-4e9d-b2a1-7a8f3ed1b2aa
+VITE_WEBHOOK_COMPETITOR_ANALYSIS=787939db-5fa7-4001-8a7e-f61dfa4a8b7e
+VITE_WEBHOOK_PARSE_CV=d1556c91-62fe-4291-aa0f-344423589a65
+VITE_WEBHOOK_OPTIMIZE_CV=877cb284-e755-42f3-867d-95637711c837
+VITE_WEBHOOK_FINALIZE_CV=27012432-3405-413c-948e-1e85a862feb9
+VITE_WEBHOOK_CREATE_CV=34bfbe04-c6c5-4347-986d-77dd75d79211
+VITE_WEBHOOK_BUSINESS_ANALYZER=2ef73a61-2c15-4f52-bf06-156d4cd93896
+
+# Future: Complaints webhook (create in n8n first)
+VITE_WEBHOOK_SUBMIT_COMPLAINT=
