adding reply by email

--- a/.env.local.example
+++ b/.env.local.example
@@ -20,3 +20,6 @@ VITE_WEBHOOK_BUSINESS_ANALYZER=business-analyzer
 
 # Future: Complaints webhook (create in n8n first)
 VITE_WEBHOOK_SUBMIT_COMPLAINT=submit-complaint
+
+# Email Reply via n8n SMTP
+VITE_WEBHOOK_SEND_EMAIL_REPLY=send-email-reply
