re enable consultaion and some fixes

--- a/.env.local.example
+++ b/.env.local.example
@@ -21,5 +21,9 @@ VITE_WEBHOOK_BUSINESS_ANALYZER=business-analyzer
 # Future: Complaints webhook (create in n8n first)
 VITE_WEBHOOK_SUBMIT_COMPLAINT=submit-complaint
 
+# Payment webhooks
+VITE_WEBHOOK_INITIATE_PAYMENT=initiate-payment
+VITE_WEBHOOK_PAYMENT_CALLBACK=payment-callback
+
 # Email Reply via n8n SMTP
 VITE_WEBHOOK_SEND_EMAIL_REPLY=send-email-reply
